objects/ssot__ProviderActivityMeasureType__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ActivityAccountFieldText__c</fullName>
        <label>Activity Account Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ActivityObject__c</fullName>
        <label>Activity Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ActivityParentObjRelaFieldText__c</fullName>
        <label>Activity Parent Obj Relationship Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ActivityParentObject__c</fullName>
        <label>Activity Parent Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ActivityProductFieldText__c</fullName>
        <label>Activity Product Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ActivityTerritoryFieldText__c</fullName>
        <label>Activity Territory Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ActivityTypSchdStatusListText__c</fullName>
        <label>Activity Type Scheduled Status List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ActivityTypeDtTmFieldText__c</fullName>
        <label>Activity Type Date Time Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ActivityTypeExclusionFieldText__c</fullName>
        <label>Activity Type Exclusion Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ActivityTypeFieldText__c</fullName>
        <label>Activity Type Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ActivityTypeFieldValueText__c</fullName>
        <label>Activity Type Field Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ActivityTypeStatusFieldText__c</fullName>
        <label>Activity Type Status Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ActivityTypeStatusListText__c</fullName>
        <label>Activity Type Status List</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AggregatedActivityActualFldText__c</fullName>
        <label>Aggregated Activity Actual Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AggregatedActivitySchdFieldText__c</fullName>
        <label>Aggregated Activity Scheduled Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AggregatedGoalFieldText__c</fullName>
        <label>Aggregated Goal Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DisplayOrderNumber__c</fullName>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Provider Activity Measure Type Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsActive__c</fullName>
        <label>Active</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Level1RelatedAccountObjectText__c</fullName>
        <label>Level 1 Related Account Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Level2RelatedAccountObjectText__c</fullName>
        <label>Level 2 Related Account Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Lvl1RelatedAccountObjFieldText__c</fullName>
        <label>Level 1 Related Account Object Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Lvl2RelatedAccountObjFieldText__c</fullName>
        <label>Level 2 Related Account Object Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
</CustomObject>